k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: task-tracker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels: 
        app: frontend
    spec:
      serviceAccountName: frontend-sa
      automountServiceAccountToken: false
      containers:
      - name: frontend
        image: localhost:5001/task-frontend:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: task-tracker
spec:
  selector:
    app: frontend
  ports:
  - port: 80
